WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252310
[GStreamer] Try to detect and recover inconsistent playing state
https://bugs.webkit.org/show_bug.cgi?id=252310
Summary
[GStreamer] Try to detect and recover inconsistent playing state
Xabier Rodríguez Calvar
Reported
2023-02-15 04:29:59 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Xabier Rodríguez Calvar
Comment 1
2023-02-15 04:52:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10139
EWS
Comment 2
2023-03-13 07:32:14 PDT
Committed
261571@main
(c5cfffe19659): <
https://commits.webkit.org/261571@main
> Reviewed commits have been landed. Closing PR #10139 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-03-13 07:33:15 PDT
<
rdar://problem/106642041
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug