Cherry-pick 261571@main (c5cfffe19659). https://bugs.webkit.org/show_bug.cgi?id=252310

[GStreamer] Try to detect and recover inconsistent playing state
    https://bugs.webkit.org/show_bug.cgi?id=252310

    Reviewed by Philippe Normand.

    A series of buffer flushings could leave pipeline in an inconsistent state: top-level bin in playing with sinks in
    paused. This happens if flush is triggered in the middle of paused-to-playing transition which was started by gst bin
    async handling of ASYNC_DONE message.

    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
    (WebCore::MediaPlayerPrivateGStreamer::handleMessage):
    (WebCore::areAllSinksPlayingForBin):
    (WebCore::MediaPlayerPrivateGStreamer::checkPlayingConsistency):
    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

    Canonical link: https://commits.webkit.org/261571@main